--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
                     <p>Контроль якості миття обладнання та приміщень</p>
                 </a>
 
+                <!-- Лаб. Контроль ХВО -->
+                <a href="hvo_control.html" class="link-card group">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-teal-500 transition-colors">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 3.104v5.714a2.25 2.25 0 01-.659 1.591L5 14.519C4.195 15.325 4.195 16.64 5 17.445l10 10c.806.805 2.12.805 2.925 0l4.08-4.081c.806-.805.806-2.12 0-2.925L17.909 10.41a2.25 2.25 0 01-.659-1.591V3.104c0-.83.672-1.5 1.5-1.5h-9c.828 0 1.5.67 1.5 1.5z" />
+                    </svg>
+                    <h2>Лаб. Контроль ХВО</h2>
+                    <p>Аналіз води та водопідготовка</p>
+                </a>
+
                 <!-- Довідкова інформація -->
                 <a href="https://sites.google.com/view/forstaf" target="_blank" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-indigo-500 transition-colors">
