--- a/checklist.html
+++ b/checklist.html
@@ -357,7 +357,7 @@
                 status.classList.add('text-emerald-600');
                 
                 // Mailto trigger
-                const recipients = "Buznitskiy7@gmail.com,Dyndarnastia@gmail.com,olgagoncharukm@gmail.com,sashaalieva18@gmail.com";
+                const recipients = "Dyndarnastia@gmail.com,Buznitskiy7@gmail.com";
                 const subject = encodeURIComponent(`Звіт QC Master: ${pendingReportData.stage} - ${pendingReportData.employee}`);
                 const body = encodeURIComponent(pendingReportData.fullReport);
                 
