--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
 
                 <!-- Фасування -->
-                <a href="checklist.html?view=during" class="link-card group">
+                <a href="sauce_boiling.html" class="link-card group">
                     <!-- Icon: Plastic Bottle -->
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-purple-500 transition-colors">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9 3h6v3H9z" /> <!-- Cap -->
@@ -124,3 +124,4 @@
     </script>
 </body>
 </html>
+
