--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v2m-4-2v2m8-2v2M4 8h16a1 1 0 0 1 1 1v2a9 9 0 1 1-18 0V9a1 1 0 0 1 1-1z" />
                     </svg>
                     <h2>Варки соусу</h2>
-                    <p>Контроль параметрів варіння</p>
+                    <p>Контроль параметрів соусу</p>
                 </a>
 
                 <!-- Етикетування -->
@@ -124,4 +124,5 @@
     </script>
 </body>
 </html>
+
 
