--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
                     <p>Контроль якості миття обладнання та приміщень</p>
                 </a>
 
-                <!-- Лаб. Контроль ХВО (Неактивне) -->
-                <div class="link-card opacity-60 grayscale">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-slate-400">
+                <!-- Лаб. Контроль ХВО (ТЕПЕР АКТИВНЕ) -->
+                <a href="water_control.html" class="link-card group">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-sky-500 transition-colors">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l-3.6 4.8a2.25 2.25 0 0 0 1.8 3.6h8.1a2.25 2.25 0 0 0 1.8-3.6l-3.6-4.8V3.75h-4.5v6z" />
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 3.75h4.5" />
                         <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6v9a2.25 2.25 0 0 1-2.25 2.25h0a2.25 2.25 0 0 1-2.25-2.25V6" />
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6h4.5" />
                     </svg>
-                    <h2 class="text-slate-500">Лаб. Контроль ХВО</h2>
-                    <p class="text-slate-400">Аналіз води та водопідготовка</p>
-                </div>
+                    <h2>Лаб. Контроль ХВО</h2>
+                    <p>Аналіз води та водопідготовка</p>
+                </a>
 
                 <!-- Довідкова інформація -->
                 <a href="https://sites.google.com/view/forstaf" target="_blank" class="link-card group">
