--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
                     <p>Звірка етикетки та пакування</p>
                 </a>
 
-                <!-- Фасування (Неактивне) -->
-                <div class="link-card opacity-60 grayscale">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-slate-400">
+                <!-- Фасування (АКТИВНЕ) -->
+                <a href="packing.html" class="link-card group">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-indigo-500 transition-colors">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9 3h6v3H9z" /> <!-- Cap -->
                         <path stroke-linecap="round" stroke-linejoin="round" d="M10 6v2a2 2 0 0 0 2 2h0a2 2 0 0 0 2-2V6" /> <!-- Neck -->
                         <path stroke-linecap="round" stroke-linejoin="round" d="M7 10h10v11a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2V10z" /> <!-- Body -->
                         <path stroke-linecap="round" stroke-linejoin="round" d="M7 15h10" /> <!-- Label line -->
                     </svg>
-                    <h2 class="text-slate-500">Фасування</h2>
-                    <p class="text-slate-400">Контроль ваги, герметичності та процесу фасування</p>
-                </div>
+                    <h2>Фасування</h2>
+                    <p>Контроль ваги, герметичності та процесу фасування</p>
+                </a>
 
                 <!-- Мийки -->
                 <a href="cleaning.html" class="link-card group">
@@ -96,7 +96,7 @@
                     <p>Контроль якості миття обладнання та приміщень</p>
                 </a>
 
-                <!-- Лаб. Контроль ХВО (ТЕПЕР АКТИВНЕ) -->
+                <!-- Лаб. Контроль ХВО -->
                 <a href="water_control.html" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-sky-500 transition-colors">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l-3.6 4.8a2.25 2.25 0 0 0 1.8 3.6h8.1a2.25 2.25 0 0 0 1.8-3.6l-3.6-4.8V3.75h-4.5v6z" />
