--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
                     <p>Аналіз води та водопідготовка</p>
                 </a>
 
+                <!-- Імпорт данних (АКТИВНА КНОПКА) -->
+                <a href="import_data.html" class="link-card group">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-fuchsia-500 transition-colors">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5" />
+                    </svg>
+                    <h2>Імпорт даних</h2>
+                    <p>Завантаження зовнішніх даних</p>
+                </a>
+
                 <!-- Довідкова інформація -->
                 <a href="https://sites.google.com/view/forstaf" target="_blank" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-indigo-500 transition-colors">
