--- a/water_control.html
+++ b/water_control.html
@@ -111,25 +111,23 @@
             </div>
 
             <!-- Salt Section -->
-            <div class="bg-slate-50 dark:bg-slate-800 p-5 rounded-lg border border-slate-200 dark:border-slate-700">
-                <h3 class="text-sm font-bold text-slate-500 dark:text-slate-400 uppercase mb-4 border-b border-slate-200 dark:border-slate-600 pb-2">Таблетована сіль (рівень)</h3>
-                <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
-                    <div>
-                        <label class="block text-xs font-bold text-slate-500 mb-1">Бачок №1</label>
-                        <select id="hvo-salt1" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors" required onchange="checkStatus(this)">
-                            <option value="" disabled selected>Оберіть...</option>
-                            <option value="В нормі">В нормі</option>
-                            <option value="Не в нормі">⚠️ Не в нормі</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label class="block text-xs font-bold text-slate-500 mb-1">Бачок №2</label>
-                        <select id="hvo-salt2" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors" required onchange="checkStatus(this)">
-                            <option value="" disabled selected>Оберіть...</option>
-                            <option value="В нормі">В нормі</option>
-                            <option value="Не в нормі">⚠️ Не в нормі</option>
-                        </select>
-                    </div>
+            <div class="bg-sky-500 text-white p-3 rounded-lg text-center text-lg font-bold uppercase tracking-wide shadow-md mb-4">Таблетована сіль</div>
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
+                <div>
+                    <label class="block text-xs font-bold text-slate-500 mb-1">Бачок №1</label>
+                    <select id="hvo-salt1" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors" required onchange="checkStatus(this)">
+                        <option value="" disabled selected>Оберіть...</option>
+                        <option value="В нормі">В нормі</option>
+                        <option value="Не в нормі">⚠️ Не в нормі</option>
+                    </select>
+                </div>
+                <div>
+                    <label class="block text-xs font-bold text-slate-500 mb-1">Бачок №2</label>
+                    <select id="hvo-salt2" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors" required onchange="checkStatus(this)">
+                        <option value="" disabled selected>Оберіть...</option>
+                        <option value="В нормі">В нормі</option>
+                        <option value="Не в нормі">⚠️ Не в нормі</option>
+                    </select>
                 </div>
             </div>
 
@@ -146,26 +144,23 @@
             </div>
 
             <!-- Chemical Indicators -->
-            <div class="bg-sky-50 dark:bg-slate-800/80 p-5 rounded-lg border border-sky-100 dark:border-slate-700">
-                <h3 class="text-sm font-bold text-sky-800 dark:text-sky-400 uppercase mb-4 border-b border-sky-200 dark:border-slate-600 pb-2">Хімічні показники (після ХВО)</h3>
-                
-                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                    <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 mb-1">Загальна жорсткість</label>
-                        <input type="number" step="0.01" id="hvo-hardness" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors">
-                    </div>
-                    <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 mb-1">Рівень заліза (Fe)</label>
-                        <input type="number" step="0.01" id="hvo-iron" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors">
-                    </div>
-                    <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 mb-1">Рівень марганцю (Mn)</label>
-                        <input type="number" step="0.01" id="hvo-manganese" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors">
-                    </div>
-                    <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 mb-1">pH води</label>
-                        <input type="number" step="0.01" id="hvo-ph" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors">
-                    </div>
+            <div class="bg-sky-500 text-white p-3 rounded-lg text-center text-lg font-bold uppercase tracking-wide shadow-md mb-4">Хімічні показники (після ХВО)</div>
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                <div>
+                    <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 mb-1">Загальна жорсткість</label>
+                    <input type="number" step="0.01" id="hvo-hardness" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors">
+                </div>
+                <div>
+                    <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 mb-1">Рівень заліза (Fe)</label>
+                    <input type="number" step="0.01" id="hvo-iron" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors">
+                </div>
+                <div>
+                    <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 mb-1">Рівень марганцю (Mn)</label>
+                    <input type="number" step="0.01" id="hvo-manganese" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors">
+                </div>
+                <div>
+                    <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 mb-1">pH води</label>
+                    <input type="number" step="0.01" id="hvo-ph" class="w-full bg-white dark:bg-slate-900 border-2 border-slate-300 dark:border-slate-600 rounded-lg py-3 px-4 transition-colors">
                 </div>
             </div>
 
@@ -202,7 +197,7 @@
     </div>
 
     <script>
-        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzsxJU02BRlR5g_d3JIgVBHlTJydcXywicaZpqc-QQYwPN07z5iWsd7C6XzKQpiSC7a/exec";
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwtN3ZNBAsj3XE-99NuX_iLaZDCqGtmM6baNfXDylPM1qqbasGeNGLfdc4vc73f5GPl/exec";
         const employees = ["Соботович Л.М.", "Огаркова М.В.", "Інший"];
         
         const empSel = document.getElementById('employeeSelect');
@@ -405,5 +400,4 @@ ${alerts}
         document.getElementById('doSendBtn').onclick = executeSend;
     </script>
 </body>
-
 </html>
