--- a/sauce_boiling.html
+++ b/sauce_boiling.html
@@ -155,7 +155,7 @@
                 <div>
                     <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-2">pH *</label>
                     <input type="number" step="0.01" id="tst-ph" oninput="validatePH(this)" class="rounded-lg">
-                    <p id="ph-warning" class="hidden text-xs font-bold text-red-600 mt-1 animate-pulse">⚠️ Увага: низька кислотність!</p>
+                    <p id="ph-warning" class="hidden text-xs font-bold text-red-600 mt-1 animate-pulse">⚠️ Увага: високий pH!</p>
                 </div>
                 <div>
                     <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-2">Центрифугування</label>
@@ -514,6 +514,7 @@ ${alerts}
     </script>
 </body>
 </html>
+
 
 
 
