--- a/cleaning.html
+++ b/cleaning.html
@@ -410,13 +410,13 @@
             const int = document.getElementById('check-int').value;
             const agg = document.getElementById('check-agg').value;
             
-            if(!ext || !int || !agg) { alert("Заповніть результати огляду!"); return; }
+            if(!ext || !int || !agg) { alert("Заповніть результати огляду (Чисто/Брудно)!"); return; }
             if(!hasSignature) { alert("Будь ласка, підпишіть звіт!"); return; }
 
             let alerts = "";
             if(ext === '❌' || int === '❌' || agg === '❌') alerts += "\n🔴 УВАГА: Виявлено забруднення!";
 
-            let headerIcon = alerts ? "⚠️" : "🧹";
+            let headerIcon = alerts ? "⚠️" : "📤";
 
             const report = `${headerIcon} ЗВІТ QC Master: Мийки
 ===========================
@@ -427,10 +427,10 @@
 🏗️ Тип: ${type}
 ⚙️ Об'єкт: ${obj}
 
-🔍 Результати:
-   • Зовнішній вигляд: ${ext}
-   • Внутрішня поверхня: ${int}
-   • Вузли та агрегати: ${agg}
+🔍 Результати огляду:
+   • Зовнішній вигляд: ${ext === '✅' ? '+' : '-'}
+   • Внутрішня поверхня: ${int === '✅' ? '+' : '-'}
+   • Вузли та агрегати: ${agg === '✅' ? '+' : '-'}
 
 👷 Відповідальний: ${resp}
 (Підпис додано до електронного звіту)
