--- a/labeling.html
+++ b/labeling.html
@@ -199,7 +199,7 @@
             ],
             "Bonsai Professional": [
                 {id: "3305", name: "Bonsai professional соус БОЛОНЬЄЗЕ (Італ. кухня) 1000 мл"}, {id: "3301", name: "Bonsai professional соус ГОСТРО-СОЛОДКИЙ (Китай. кухня) 1000 мл"}, {id: "3307", name: "Bonsai professional соус Для піци 1000 гр"},
-                {id: "3308", name: "Bonsai professional соус КИСЛО-СОЛОДКИЙ (Китай. кухня) 1000 мл"}, {id: "3309", name: "Bonsai professional соус Кімчі 1100 гр"}, {id: "3310", name: "Bonsai professional соус КУНЖУТНИЙ (густий) 1000 мл"},
+                {id: "3308", name: "Bonsai professional соус КИСЛО-СОЛОДКИЙ (Китай. кухня) 1000 мл"}, {id: "____", name: "Bonsai professional соус Цезар 5200 гр"}, {id: "3310", name: "Bonsai professional соус КУНЖУТНИЙ (густий) 1000 мл"},
                 {id: "3311", name: "Bonsai professional соус Сирний 1 кг/відро"}, {id: "3312", name: "Bonsai professional соус соєвий Класичний 1000 мл (концентрат 1:1)"}, {id: "3313", name: "Bonsai professional соус соєвий класичний 5000 мл ПЕТ (Концентрат 1:1)"},
                 {id: "3314", name: "Bonsai professional соус соєвий Класичний каністра 20 л New"}, {id: "3315", name: "Bonsai professional соус соєвий ТЕРІЯКІ (густий) 1000 мл"}, {id: "3316", name: "Bonsai professional соус соєвий ЯКІТОРІ (густий) 1000 мл"},
                 {id: "3317", name: "Bonsai professional соус солодкий ТЕРІЯКІ (густий) 1000 мл"}, {id: "3318", name: "Bonsai professional соус Солодкий Чилі 5700 гр ПЕТ"}, {id: "3319", name: "Bonsai professional соус УНАГІ (густий) 1000 мл"},
@@ -379,7 +379,7 @@
 ⚙️ Машина: ${machine}
 📦 Продукт: ${prod}
 🔢 Завдання: ${task}
-🔢 Партія: ${batch}
+🆔 Партія: ${batch}
 📅 Дата етикетки: ${document.getElementById('lb-date').value || '-'}
 
 📏 Плівка: ${document.getElementById('lb-width').value || '-'}
@@ -461,3 +461,4 @@ ${alerts}
     </script>
 </body>
 </html>
+
