--- a/packing.html
+++ b/packing.html
@@ -316,7 +316,7 @@
                 {id: "3301", name: "Bonsai professional соус ГОСТРО-СОЛОДКИЙ (Китай. кухня) 1000 мл"},
                 {id: "3307", name: "Bonsai professional соус Для піци 1000 гр"},
                 {id: "3308", name: "Bonsai professional соус КИСЛО-СОЛОДКИЙ (Китай. кухня) 1000 мл"},
-                {id: "3309", name: "Bonsai professional соус Кімчі 1100 гр"},
+                {id: "____", name: "Bonsai professional соус Цезар 5200 гр"},
                 {id: "3310", name: "Bonsai professional соус КУНЖУТНИЙ (густий) 1000 мл"},
                 {id: "3311", name: "Bonsai professional соус Сирний 1 кг/відро"},
                 {id: "3312", name: "Bonsai professional соус соєвий Класичний 1000 мл (концентрат 1:1)"},
