--- a/sauce_boiling.html
+++ b/sauce_boiling.html
@@ -481,7 +481,7 @@
             if (consist === '❌') alerts += "\n🔴 УВАГА: Невідповідність консистенції";
             if (!isLiquid && stab === '-') alerts += "\n🔴 УВАГА: Не стійка емульсія";
             
-            let headerIcon = alerts ? "⚠️" : "📤";
+            let headerIcon = alerts ? "🍶" : "📤";
             
             // New Report Format
             const report = `${headerIcon} ЗВІТ QC Master: Варки соусу
@@ -583,3 +583,4 @@ ${alerts}
     </script>
 </body>
 </html>
+
