--- a/packing.html
+++ b/packing.html
@@ -561,7 +561,7 @@
             if (appearance === '❌') alerts += "\n🔴 УВАГА: БРАК ЗОВНІШНЬОГО ВИГЛЯДУ";
             if (cap === '❌') alerts += "\n🔴 УВАГА: ПРОБЛЕМА З КРИШКОЮ";
 
-            let headerIcon = alerts ? "⚠️" : "📤";
+            let headerIcon = alerts ? "⚠️" : "🍶";
 
             const report = `${headerIcon} ЗВІТ QC Master: Фасування
 ===========================
